test/tests/stages/12_unsigned_integers/invalid_labels/extra_credit/switch_duplicate_cases.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ui
                  CSingleInit: 
                    CConstant: 
                      CConstUInt: 
                        TUInt: 10
                      None: 
                    None: 
                  UInt: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CVar: 
                  TIdentifier: ui
                  None: 
                CCompound: 
                  CB: 
                    List[3]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstUInt: 
                              TUInt: 4294967295
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstLong: 
                              TLong: 1099511627775
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
